--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "astro/tsconfigs/base"
+"extends": "astro/tsconfigs/strict",
+"compilerOptions": {
+    "types": [
+        "@cloudflare/workers-types/2023-07-01"
+    ]
+}
 }
